--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES6",
-    "module": "ES6",
+    "target": "es2016",
+    "module": "commonjs",
+		"esModuleInterop": true,
 		"resolveJsonModule": true,
     "lib": [
       "ES6", 
@@ -26,11 +26,5 @@
     ],
     "useDefineForClassFields": false,
 		"allowSyntheticDefaultImports": true
-  },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
   }
 }
